# djangoProject

./: .env  .gitignore  README.md  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  serives.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py  0003_blogs_contacts.py  0004_version.py  0005_alter_version_is_current_alter_version_version_name_and_more.py  0006_product_link_to_owner.py  0007_rename_link_to_owner_product_product_owner.py  0008_product_is_published.py
catalog/templates/catalog/: base.html  blog_detail.html  blogs_confirm_delete.html  blogs_detail.html  blogs_form.html  blogs_list.html  category_list.html  contact.html  home.html  index.html  product.html  product_confirm_delete.html  product_detail.html  product_details.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: mytags.py
djangoProject/: settings.py  urls.py
users/: forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_email_verify.py  0003_user_email_verified.py  0004_remove_user_email_verified.py  0005_remove_user_email_verify_alter_user_is_active.py
users/templates/users/: email_confirmed.html  login.html  password_reset_form.html  register.html  register_done.html  user_form.html  verify_email.html
users/templates/users/registration/: password_reset_complete.html  password_reset_confirm.html  (+3 more)
